# nrf51822

./: .gdbinit  .travis.yml  Cargo.toml  README.md  memory.x  nrf51.cfg
ci/: install.sh  script.sh
examples/: blinky.rs  crash.rs  hello.rs  led.rs  minimal.rs  override-an-exception.rs  panic.rs
src/: exception.rs  lang_items.rs  led.rs  lib.rs
